Story 1452: Add connect

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   }
 
   function showLoginButton() {
-    const CONNECT_URL = 'https://uppers-alpha.auth.eu-central-1.amazoncognito.com'; // Will be provided by Uplyft
-    const CONNECT_CLIENT_ID = '7d3gktssvvba6emj7ptqjhccg4'; // Will be provided by Uplyft
+    const CONNECT_URL = 'https://connect.uppers.alpha.uplyft.com'; // Will be provided by Uplyft
+    const CONNECT_CLIENT_ID = '1novo4atmn4e38k1bked20rtj'; // Will be provided by Uplyft
     const RESPONSE_TYPE = 'token';
     const SCOPE = 'email+openid+phone+profile'; // Can be any combination of these
     const REDIRECT_URI = window.location; // Configure the URL that should be called after authentication, needs to be registered at Uplyft
